@@ -1,0 +1,4 @@
+---
+  .travis.yml:
+    hc_secure: "agAqbEkJmA47hkvL/66D+FML9q7AI54rf7hjtaKwXM0hKhKBl5JhLMBvQvbKhi+59hU/m1rJs/RdoyVxz7AHq9CTna24l4Huutl9O2KmwBsayZKANwvjs80DYjA7808AGZ5hzDkrCJDrNzVRZM0QxY4Skq+jxBhnpo6UxdfNEXY="
+
