@@ -2,7 +2,6 @@ require 'rubygems'
 require 'puppetlabs_spec_helper/rake_tasks'
 require 'puppet-lint/tasks/puppet-lint'
 require 'puppet-syntax/tasks/puppet-syntax'
-require 'rspec-system/rake_task'
 
 exclude_paths = [
   "pkg/**/*",
