@@ -103,9 +103,6 @@ class mcollective(
   $beaver                           = false,
 ){
 
-  include ruby
-  include facter
-
   case $enabled {
     'true', true, True: {
       $real_enabled = true
@@ -116,33 +113,33 @@ class mcollective(
   }
 
   class { 'mcollective::server':
-    enabled                           => $real_enabled,
-    stomp_host                        => $stomp_host,
-    stomp_port                        => $stomp_port,
-    stomp_user                        => $stomp_user,
-    stomp_password                    => $stomp_password,
-    psk                               => $psk,
-    classes_file                      => $classes_file,
-    packages                          => $server_packages,
-    audit_package                     => $audit_package,
-    audit_provider                    => $audit_provider,
-    audit_logfile                     => $audit_logfile,
-    resource_allow_managed_resources  => $resource_allow_managed_resources,
-    resource_type_whitelist           => $resource_type_whitelist,
-    resource_type_blacklist           => $resource_type_blacklist,
-    beaver                            => $beaver,
+    enabled                          => $real_enabled,
+    stomp_host                       => $stomp_host,
+    stomp_port                       => $stomp_port,
+    stomp_user                       => $stomp_user,
+    stomp_password                   => $stomp_password,
+    psk                              => $psk,
+    classes_file                     => $classes_file,
+    packages                         => $server_packages,
+    audit_package                    => $audit_package,
+    audit_provider                   => $audit_provider,
+    audit_logfile                    => $audit_logfile,
+    resource_allow_managed_resources => $resource_allow_managed_resources,
+    resource_type_whitelist          => $resource_type_whitelist,
+    resource_type_blacklist          => $resource_type_blacklist,
+    beaver                           => $beaver,
   }
 
   if ( $client == 'true' or $client == true ) {
     class { 'mcollective::client':
-      stomp_host      => $stomp_host,
-      stomp_port      => $stomp_port,
-      stomp_user      => $stomp_user,
-      stomp_password  => $stomp_password,
-      psk             => $psk,
-      client_logfile  => $client_logfile,
-      client_group    => $client_group,
-      packages        => $client_packages,
+      stomp_host     => $stomp_host,
+      stomp_port     => $stomp_port,
+      stomp_user     => $stomp_user,
+      stomp_password => $stomp_password,
+      psk            => $psk,
+      client_logfile => $client_logfile,
+      client_group   => $client_group,
+      packages       => $client_packages,
     }
   }
 }
