@@ -66,10 +66,10 @@ class mcollective::server (
   }
 
   service { 'mcollective':
-    ensure     => $running,
-    enable     => $enabled,
-    require    => Package['mcollective'],
-    subscribe  => File['/etc/mcollective/server.cfg'];
+    ensure    => $running,
+    enable    => $enabled,
+    require   => Package['mcollective'],
+    subscribe => File['/etc/mcollective/server.cfg'];
   }
 
 
@@ -77,31 +77,20 @@ class mcollective::server (
   file { '/usr/libexec/mcollective/mcollective/agent/provision.rb': ensure => 'absent', notify => Service['mcollective'] }
 
   file { '/etc/mcollective/facts.yaml':
-    owner     => 'root',
-    group     => 'root',
-    mode      => '0400',
-    content   => template('mcollective/server/facts.yaml.erb'),
-    require   => Package['mcollective'];
+    owner   => 'root',
+    group   => 'root',
+    mode    => '0400',
+    content => template('mcollective/server/facts.yaml.erb'),
+    require => Package['mcollective'];
   }
 
   if $audit_logfile != '' {
     if $beaver == true {
       beaver::stanza { $audit_logfile:
-        type    => 'mcollective-audit',
-        tags    => [$::disposition],
-        format  => 'rawjson',
+        type   => 'mcollective-audit',
+        tags   => [$::disposition],
+        format => 'rawjson',
       }
     }
-
-    logrotate::file { 'mcollective-audit':
-      log         => $audit_logfile,
-      options     => [ 'missingok', 'notifempty', 'create 0644 root root', 'sharedscripts', 'weekly', 'compress' ];
-    }
-  }
-
-  # Logrotate for mcollective logs
-  logrotate::file { 'mcollective':
-    log         => '/var/log/mcollective.log',
-    options     => [ 'missingok', 'notifempty', 'create 0644 root root', 'sharedscripts', 'weekly', 'compress' ];
   }
 }
