@@ -1,3 +1,4 @@
+  Remove dependency on evenup/ruby, evenup/facter, evenup/logrotate, evenup/common
 20140205 v1.7.1
   Set client logfile group
 20140131 v1.7.0
